--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #a9b6ce;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
