--- a/src/components/HomeScreen/styles.css
+++ b/src/components/HomeScreen/styles.css
@@ -5,22 +5,14 @@
   cursor: pointer;
   font-family: sans-serif;
   margin: 20%;
-  /* position: absolute;
-  top: 50%;
-  left: 50%;
-  height: 30%;
-  width: 50%;
-  margin: -5% 0 0 -25%; */
-  /* line-height: 1000px; */
-}
-
-.body {
-  background-color: teal;
 }
 
 .plusSign {
   text-align: right;
-  margin-bottom: 50%;
+  /* margin-bottom: 50%; */
+  animation: App-logo-spin infinite 20s linear;
+  height: 50px;
+  background-size: 10%;
 
   font-size: 100px;
   color: white;
@@ -35,4 +27,23 @@
   height: 30%;
   width: 50%;
   margin: -5% 0 0 -25%;
+}
+
+.body {
+  background-image: url("../../chalkboard.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
