--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
 .App {
   text-align: center;
+  background-image: url("chalkboard.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100%;
+  min-height: 100%;
+  min-width: 1024px;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .App-logo {
