--- a/src/components/Topics/styles.css
+++ b/src/components/Topics/styles.css
@@ -3,19 +3,21 @@ body {
 }
 
 .title {
-  align-content: center;
-  font-size: 40px;
+  text-align: center;
+  font-size: 100px;
   margin-bottom: 5%;
-  margin-top: 5;
+  margin-top: 80px;
 }
 
 .options {
+  text-align: center;
   border-color: #e7e7e7;
   background-color: transparent;
   color: #e7e7e7;
   font-size: 40px;
   border-radius: 10px;
   cursor: pointer;
+  margin-top: 70px;
 }
 /* 
 .options:hover {
@@ -25,7 +27,6 @@ body {
 
 .flash {
   animation-duration: 4s;
-  animation-iteration-count: infinite;
 }
 
 .fadeIn1 {
