--- a/src/components/HomeScreen/styles.css
+++ b/src/components/HomeScreen/styles.css
@@ -4,29 +4,32 @@
   color: white;
   cursor: pointer;
   font-family: sans-serif;
-  margin: 20%;
+  margin: 10%;
 }
 
 .plusSign {
-  text-align: right;
-  /* margin-bottom: 50%; */
-  animation: App-logo-spin infinite 20s linear;
-  height: 50px;
-  background-size: 10%;
+  text-align: center;
+  margin-left: 50%;
+  margin-bottom: 10%;
+  /* animation: App-logo-spin infinite 5s linear; */
 
+  height: 40px;
+  width: 20px;
+  background-size: 10%;
   font-size: 100px;
   color: white;
 }
 
 .minusSign {
-  text-align: left;
+  text-align: center;
+  margin-left: 70%;
+
+  animation: App-logo-spin infinite 5s linear;
+  height: -50px;
+  width: 20px;
+  background-size: 10%;
   font-size: 100px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  height: 30%;
-  width: 50%;
-  margin: -5% 0 0 -25%;
+  color: white;
 }
 
 .body {
@@ -45,5 +48,14 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes Color-sign {
+  from {
+    color: blue;
+  }
+  to {
+    color: white;
   }
 }
