--- a/src/components/HomeScreen/styles.css
+++ b/src/components/HomeScreen/styles.css
@@ -1,9 +1,13 @@
+@font-face {
+  font-family: "EraserDust";
+  src: local("EraserDust"), url(../../Fonts/EraserDust.ttf) format("woff");
+}
 .text {
   text-align: center;
   font-size: 100px;
   color: white;
   cursor: pointer;
-  font-family: sans-serif;
+  font-family: "EraserDust";
   margin: 20%;
 }
 
@@ -30,6 +34,7 @@
 }
 
 .body {
+  font-family: "EraserDust";
   background-image: url("../../chalkboard.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
