--- a/src/components/Difficulty/styles.css
+++ b/src/components/Difficulty/styles.css
@@ -2,7 +2,7 @@
 @font-face {
   font-family: "EraserDust";
   src: local("EraserDust"), url(../../Fonts/EraserDust.ttf) format("woff");
-
+}
 .title {
   text-align: center;
   font-size: 100px;
