--- a/src/components/Difficulty/styles.css
+++ b/src/components/Difficulty/styles.css
@@ -1,8 +1,7 @@
-
 @font-face {
   font-family: "EraserDust";
   src: local("EraserDust"), url(../../Fonts/EraserDust.ttf) format("woff");
-
+}
 .title {
   text-align: center;
   font-size: 100px;
@@ -19,5 +18,4 @@
   border-radius: 10px;
   cursor: pointer;
   margin-top: 70px;
-
 }
